testing/tests/ui/escape-filter-invalid-kind.stderr
error: invalid escaper `b"none"`. Expected a string, found a slice
 --> BadEscapeKind.txt:1:14
       "b\"none\") }}"
 --> tests/ui/escape-filter-invalid-kind.rs:5:14
  |
5 |     source = r#"{{ "a"|escape(b"none") }}"#,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid escaper `b"none"`. Expected a string, found a CStr
 --> BadEscapeKind2.txt:1:14
       "c\"none\") }}"
  --> tests/ui/escape-filter-invalid-kind.rs:12:14
   |
12 |     source = r#"{{ "a"|escape(c"none") }}"#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
